# Peliselli-puheohjaus

./: .gitignore  README.md  TODO.md  launcher.py  start_dev.ps1
backend/: .env.example  INSTALL.md  README.md  pyproject.toml  requirements.txt
backend/app/: example.py  main.py
backend/app/agent/: agent.py  mcp_tools.py
backend/app/agent/tools/: __init__.py  get_chuck_norris_joke.py  get_current_lunch_at_samk_silvia.py  get_date_and_time.py  set_frontend_language.py
backend/app/crud/: frontend_language_crud.py  prompt_crud.py  voice_crud.py
backend/app/database/: agent.py  models.py
backend/app/db/: agent.py  ha_mcp_tools.py  models.py
backend/app/db/tools/: __init__.py  change_ha_light_color.py  change_ha_scene.py  get_chuck_norris_joke.py  get_current_lunch_at_samk_silvia.py  get_date_and_time.py  get_weather_for_area.py
backend/app/mcp/: mcp_client.py  mcp_server.py  server.py
backend/app/routers/: prompts.py  terminate.py  ui.py  voice.py
frontend/: .env.example  INSTALL.md  README.md  index.html  package-lock.json  package.json  start.sh  vite.config.js
frontend/public/: config.json
frontend/src/: App.jsx  ChatbotApp.jsx  ChatbotAppCopy.jsx  Routing.jsx  VoiceApp.jsx  app.css  ellipsis-anim.css  i18n.js  main.jsx
frontend/src/components/: Chat.jsx  Header.jsx  Input.jsx  LanguageSelector.jsx  ModelSelect.jsx  Persona.jsx  UISelector.jsx  VoiceAvatar.jsx  VoiceInput.jsx  VoiceStatusDetails.jsx  VoiceToggleListeningButton.jsx
frontend/src/stores/: useConversationStore.js  useMessageStore.js  useModelStore.js  useStateStore.js
(+7 files in other folders)
