[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "fastapi==0.136.1",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.17.1",
    "cryptography==48.0.1",
    "greenlet==3.5.1",
    "idna==3.15",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "langchain==1.2.17",
    "langchain-community==0.4.1",
    "langchain-core==1.4.0",
    "langchain-mcp-adapters==0.3.0",
    "langchain-ollama==1.1.0",
    "langgraph-checkpoint==4.1.0",
    "langgraph-sdk==0.3.14",
    "langsmith==0.8.4",
    "markdown-it-py==4.2.0",
    "mcp==1.27.2",
    "ollama==0.6.2",
    "orjson==3.11.9",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-extra-types==2.11.1",
    "pydantic-settings==2.14.1",
    "python-multipart==0.0.28",
    "python-dotenv==1.2.2",
    "pywin32==312",
    "requests==2.34.2",
    "rich-toolkit==0.19.9",
    "sentry-sdk==2.60.0",
    "urllib3==2.7.0",
    "uuid-utils==0.15.0",
    "uvicorn==0.47.0",
]
